chore: 要約を更新

--- a/content/blog/株式情報/銘柄分析/2021-01-27-LHX.md
+++ b/content/blog/株式情報/銘柄分析/2021-01-27-LHX.md
@@ -1,6 +1,6 @@
 ---
 title: 米国銘柄分析 | L3Harris Technologies(LHX)
-description: L3Harris Technologies は防衛産業と情報技術で知られる企業です。
+description: L3Harris Technologiesの銘柄分析。2019年合併で誕生した防衛・航空宇宙企業。1890年創業の歴史、通信・観測技術でC6ISR分野に強み。GPS衛星全機にコンポーネント搭載、政府収益依存75%。宇宙商業化で成長期待の防衛株の投資分析。
 slug: l3harris-technologies
 publishedAt: 2021-01-28
 coverImage: /Hero/lhx-space_egv6ld.jpg
