--- a/content/blog/株式情報/銘柄分析/2021-02-20-TMDX.md
+++ b/content/blog/株式情報/銘柄分析/2021-02-20-TMDX.md
@@ -1,6 +1,6 @@
 ---
 title: 米国銘柄分析 | TransMedics(TMDX)
-description: 移植手術のための臓器を保存するためのシステムを提供する企業です。
+description: TransMedicsの銘柄分析。臓器移植向けOrgan Care System（OCS）を開発するヘルスケア企業。1998年創業、冷蔵に代わる温度保存技術で臓器ダメージを50%削減。肺でFDA承認済み、心臓・肝臓も申請中。高成長も赤字継続の医療機器株の投資分析。
 slug: transmedics
 publishedAt: 2021-02-20T06:13:00
 coverImage: /Hero/tmdx-website_chqakn.jpg
