--- a/content/blog/株式情報/銘柄分析/2021-04-07-LRCX.md
+++ b/content/blog/株式情報/銘柄分析/2021-04-07-LRCX.md
@@ -1,6 +1,6 @@
 ---
 title: 米国銘柄分析 | Lam Research (LRCX)
-description: 半導体製造のエッチング工程に強みを持つ企業
+description: Lam Researchの銘柄分析。半導体製造装置メーカーでドライエッチング工程に特化。1980年創業、微細化技術で競争優位性を確立。TSMC・サムスン等が主要顧客、粗利益率40%以上とROIC20%前後の高収益。半導体市場拡大の恩恵を受ける装置株の投資分析。
 slug: lam-research
 publishedAt: 2021-04-07T00:00:00
 coverImage: /Hero/lrcx-title.jpg
