--- a/content/blog/株式情報/銘柄分析/2021-04-24-MTN.md
+++ b/content/blog/株式情報/銘柄分析/2021-04-24-MTN.md
@@ -1,6 +1,6 @@
 ---
 title: 米国銘柄分析 | Vail Resorts Inc. (MTN)
-description: ロッキー山脈など山岳リゾートを手掛ける企業
+description: Vail Resortsの銘柄分析。37の山岳リゾート・スキー場を運営する景気循環銘柄。ロッキー山脈等の立地、リフト収益とホテル事業で構成。COVID-19で大幅減収も高いCFマージンと季節性ビジネスで回復期待の観光・レジャー株の投資分析。
 slug: vail-resorts
 publishedAt: 2021-04-25T03:30:00
 coverImage: /Hero/pexels-evgenia-kirpichnikova-1973293.jpg
