--- a/content/blog/株式情報/銘柄分析/2021-05-29-ODFL.md
+++ b/content/blog/株式情報/銘柄分析/2021-05-29-ODFL.md
@@ -1,6 +1,6 @@
 ---
 title: 米国銘柄分析 | Old Dominion Freight Line (ODFL)
-description: 小中ロットに特化したトラック運送を手掛ける企業
+description: Old Dominion Freight Lineの銘柄分析。LTL（小口貨物）輸送に特化した北米大手運送業者。1934年創業、244のサービスセンター網で1-2日配送を実現。高ROICと営業利益率で安定成長、参入障壁の高い物流業界での競争優位性を持つ運輸株の投資分析。
 slug: old-dominion-freight-line
 publishedAt: 2021-05-29T14:30:00
 coverImage: /Hero/odfl-title.jpg
