--- a/content/blog/株式情報/銘柄分析/2021-08-21-INTU.md
+++ b/content/blog/株式情報/銘柄分析/2021-08-21-INTU.md
@@ -1,6 +1,6 @@
 ---
 title: 米国銘柄分析 | Intuit Inc(INTU)
-description: クラウド会計サービスを手掛ける高収益企業
+description: Intuitの銘柄分析。QuickBooks、TurboTax等でクラウド会計・税務サービスを提供。1983年創業、中小企業・個人向けに特化、高いROICとキャッシュフローマージンで堅実成長。AI活用と参入障壁で競争優位性を構築する金融ソフトウェア企業の投資分析。
 slug: intuit
 publishedAt: 2021-08-21T11:05:00
 coverImage: /Hero/intu-title.jpg
