--- a/content/blog/株式情報/銘柄分析/2021-11-19-IDXX.md
+++ b/content/blog/株式情報/銘柄分析/2021-11-19-IDXX.md
@@ -1,6 +1,6 @@
 ---
 title: 米国銘柄分析 | IDEXX Laboratories(IDXX)
-description: ペット・家畜向けの診断キットやサービスの製造販売を手掛ける企業
+description: IDEXX Laboratoriesの銘柄分析。動物病院向け診断機器・検査キットを提供する動物ヘルスケア企業。30年の歴史、5年連続10%以上のオーガニック成長、ROIC55%の高効率経営でペット市場拡大の恩恵を受ける高品質成長株の詳細分析。
 slug: idexx-laboratories
 publishedAt: 2021-11-19T05:10:00
 coverImage: /Hero/idxx-cover_f5ztjc.jpg
