--- a/content/blog/株式情報/銘柄分析/2025-01-26-RKLBy.md
+++ b/content/blog/株式情報/銘柄分析/2025-01-26-RKLBy.md
@@ -1,6 +1,6 @@
 ---
 title: 米国銘柄分析 | Rocket Lab(RKLB)
-description: 宇宙ベースのセルラーブロードバンドネットワーク
+description: Rocket Labの銘柄分析。Electronロケットで小型衛星打ち上げに特化、垂直統合モデルでPhoton衛星も製造。中型ロケットNeutron開発中、政府契約も拡大。売上成長も赤字継続、競争激化と開発リスクを抱える宇宙開発企業の投資分析。
 slug: rocket-lab
 publishedAt: 2025-01-26T01:20:00
 coverImage: /Hero/post-apocalypse-and-star
