--- a/content/blog/株式情報/銘柄分析/2025-01-27-JOBY.md
+++ b/content/blog/株式情報/銘柄分析/2025-01-27-JOBY.md
@@ -1,6 +1,6 @@
 ---
 title: 米国銘柄分析 | Joby Aviation(JOBY)
-description: Bevirt氏のビジョンは、eVTOLによって都市部の交通渋滞を緩和し、人々の移動をより効率的かつ持続可能なものにすることです。
+description: Joby Aviationの銘柄分析。eVTOL（電動垂直離着陸機）でエアタクシーサービスを展開する先発企業。Toyota、Uberとの戦略的提携、FAAの型式証明進行中だが、収益化は未達成で技術・規制リスクを抱える航空モビリティ投資案件の詳細分析。
 slug: joby-aviation
 publishedAt: 2025-01-27T12:01:00
 coverImage: /Hero/joby-mobility
