chore: 要約を更新

--- a/content/blog/株式情報/銘柄分析/2020-10-31-NET.md
+++ b/content/blog/株式情報/銘柄分析/2020-10-31-NET.md
@@ -1,6 +1,6 @@
 ---
 title: 米国銘柄分析 | Cloudflare(NET)
-description: CloudflareがCDNだけの会社だと思っていませんか？
+description: Cloudflareの銘柄分析。CDNはもちろんネットワーク上のプラットフォーム全般に対しても幅広いアプローチを続けており、IT技術をうまく活用できる企業が生き残っていく時代に必要とされる企業へと成長中。
 slug: cloudflare
 publishedAt: 2020-10-31
 coverImage: /Hero/cloudflare-logo_f10qrs.jpg
