--- a/content/blog/株式情報/銘柄分析/2020-11-14-FGEN.md
+++ b/content/blog/株式情報/銘柄分析/2020-11-14-FGEN.md
@@ -1,6 +1,6 @@
 ---
 title: 米国銘柄分析 | FibroGen(FGEN)
-description: FibroGen Inc.(FGEN)について調べてみました。
+description: FibroGenの銘柄分析。バイオ創薬企業として知られており、従来の治療体系を大きく変える画期的医薬品の開発を目指す。特に貧血や繊維性疾患、がん治療に対して注力して開発。
 slug: fibrogen
 publishedAt: 2020-11-14
 coverImage: /Hero/fibrogen-logo_s5uhng.jpg
