--- a/content/blog/株式情報/銘柄分析/2020-12-12-GD.md
+++ b/content/blog/株式情報/銘柄分析/2020-12-12-GD.md
@@ -1,6 +1,6 @@
 ---
 title: 米国銘柄分析 | General Dynamics(GD)
-description: General Dynamics は商業ジェット機と防衛分野で知られる企業です。
+description: General Dynamicsの銘柄分析。商業ジェット機と防衛分野で知られる企業。アメリカの国防を担う企業の1つであり、原子力潜水艦など特に潜水艦技術に秀でていることが有名。
 slug: general-dynamics
 publishedAt: 2020-12-12
 coverImage: /Hero/gd-electricboat_i2nhmi.jpg
