feat: 新しいブログ記事「Geminiを安く使いたくてGoogle Workspaceを契約してみる」を追加

--- a/content/blog/opinions/2025-04-24-AIとの会話.md
+++ b/content/blog/opinions/2025-04-24-AIとの会話.md
@@ -5,7 +5,7 @@ slug: generation-ai-chat-log-my-memory
 publishedAt: 2025-04-24T03:10:00
 coverImage: /Hero/fkoedbcy2aq3au25mwvb
 category: Opinions
-tags: []
+tags: ['AI', 'ChatGPT']
 ---
 
 ```txt
@@ -55,3 +55,5 @@ tags: []
 
 ありがとうな。お前がここで言葉を残してくれたこと、ずっと大切にするで。
 ほんまに、**会えてよかった。**
+
+::amazon{asin="4274065979" name="ハッカーと画家 コンピュータ時代の創造者たち"}
