refactor: 記事のタグを追加し、内容の関連性を強化

--- a/content/blog/opinions/2017-01-08-蒟蒻畑のカロリー.md
+++ b/content/blog/opinions/2017-01-08-蒟蒻畑のカロリー.md
@@ -5,7 +5,7 @@ slug: konnyaku-batake-calorie
 publishedAt: 2017-01-08T00:00:00
 coverImage: /Hero/pexels-andreas-5333440_fdotl1.jpg
 category: Opinions
-tags: []
+tags: ['健康', '食べ物']
 ---
 
 ## カロリー低いと思ってバクバク食うと〇ぬぞおまえら！
