--- a/content/blog/opinions/2020-12-09-XUAR.md
+++ b/content/blog/opinions/2020-12-09-XUAR.md
@@ -5,7 +5,7 @@ slug: companies-suspected-of-using-forced-labor
 publishedAt: 2020-12-09T00:00:00
 coverImage: /Hero/pexels-donald-tong-143580_nn8t45.jpg
 category: Opinions
-tags: []
+tags: ['ビジネス', '社会']
 ---
 
 NikeやCoca Colaといったアメリカの大手企業が、中国の新疆ウイグル自治区での強制労働を伴う輸入品を禁止するための法案に対して法案の効力を弱めようとロビー活動を行っていたことが報道されています。人権問題に熱心なようにアピールする一方で、正反対の行いがNew York Timesにて告発されています。
