--- a/content/blog/opinions/2021-03-06-飲み会と時代錯誤批判の浅さ.md
+++ b/content/blog/opinions/2021-03-06-飲み会と時代錯誤批判の浅さ.md
@@ -5,7 +5,7 @@ slug: nomikai-hihan-hihan
 publishedAt: 2021-03-06T17:05:00
 coverImage: /Hero/pexels-pixabay-274192_qpidky.jpg
 category: Opinions
-tags: []
+tags: ['社会']
 ---
 
 ## 被害者意識が強すぎる
