--- a/content/blog/opinions/2021-04-27-スイッチカバー.md
+++ b/content/blog/opinions/2021-04-27-スイッチカバー.md
@@ -5,7 +5,7 @@ slug: review-switch-cover
 publishedAt: 2021-04-27T22:00:00
 coverImage: /Hero/switch-cover-review.jpg
 category: Opinions
-tags: []
+tags: ['レビュー', '技術']
 ---
 
 体に染みついた習慣はなかなか抜けないものです。
