--- a/content/blog/opinions/2021-12-18-宇宙旅行とクルーズ.md
+++ b/content/blog/opinions/2021-12-18-宇宙旅行とクルーズ.md
@@ -5,7 +5,7 @@ slug: travel-space-cost-performance
 publishedAt: 2021-12-18T05:00:00
 coverImage: /Hero/pexels-pixabay-220201.jpg
 category: Opinions
-tags: []
+tags: ['ビジネス']
 ---
 
 ZOZOTOWNの前澤友作氏の宇宙旅行が話題です。なんでも宇宙旅行は費用が高すぎて途方もない高い旅行なのだとか。しかし数字は絶対値で見るだけではなく、比率を見ることが比較の上では大事です。
