--- a/content/blog/opinions/2022-01-19-コンサルへの転職.md
+++ b/content/blog/opinions/2022-01-19-コンサルへの転職.md
@@ -5,7 +5,7 @@ slug: job-change-se-it-consultant
 publishedAt: 2022-01-19T18:00:00
 coverImage: /Hero/pexels-cottonbro-5483064.jpg
 category: Opinions
-tags: []
+tags: ['キャリア', 'IT']
 ---
 
 ITエンジニアのコミュニティを観察しているとエンジニアは飽きたら転職を繰り返していくのが当たり前のように錯覚しますが、同じくエンジニアでありながら私にとっては未知の世界です。しかし紆余曲折あり、私自身も初めての転職活動を行ってみたのでそこで得た体験をシェアしようと思います。
