--- a/content/blog/opinions/2023-10-21-VTuberのスキャンダル.md
+++ b/content/blog/opinions/2023-10-21-VTuberのスキャンダル.md
@@ -5,7 +5,7 @@ slug: why-do-vtuber-love-affairs-bring-shock
 publishedAt: 2023-10-21T15:25:00
 coverImage: /Hero/post-apocalypse-and-star
 category: Opinions
-tags: ['VTuber']
+tags: ['VTuber', '社会']
 ---
 
 VTuberの恋愛スキャンダルの噂が広まり、私はそれほど熱狂的なファンではありませんでしたが、不思議なことに今回の出来事にはダメージを受けました。本記事では、なぜこの出来事が私にダメージを与えたのかを言語化し、その理由を探りたいと思います。
