feat: textlint設定を更新し、技術的な文章のルールを適用

--- a/content/blog/finance/2025-02-18-ドナー移植と業界動向.md
+++ b/content/blog/finance/2025-02-18-ドナー移植と業界動向.md
@@ -114,7 +114,7 @@ TransMedicsの主要市場であるアメリカにおいて、メディケア・
 人工臓器が実用化されたとしても、すぐにドナー臓器移植が完全に不要になるわけではありません。人工臓器技術が成熟し、全ての臓器を高品質かつ大量に供給できるようになるまでには、まだ時間がかかると考えられます。その過渡期においては、TransMedicsの技術と人工臓器技術の間には、以下のようなシナジー効果が生まれる可能性があります。
 
 - バイオプリンティングや再生医療によって作られた人工臓器は、非常にデリケートな組織である可能性があります。移植までの間、最適な状態で人工臓器を保存・輸送するためにTransMedicsのOrgan Care System(OCS)の技術が応用できる可能性があります。
-- OCSは臓器を生理的な温度で灌流しながら保存し、状態をモニタリングすることができます。この機能は人工臓器の移植前の品質評価にも役立つ可能性があります。人工臓器が複雑な構造を持つ場合、OCSのようなシステムで灌流することで機能テストを行うことも考えられます。
+- OCSは臓器を生理的な温度で灌流しながら保存し、状態をモニタリングできます。この機能は人工臓器の移植前の品質評価にも役立つ可能性があります。人工臓器が複雑な構造を持つ場合、OCSのようなシステムで灌流することで機能テストを行うことも考えられます。
 - OCSは移植手術中にも臓器を生理的な状態で維持し、移植後の早期グラフト機能不全のリスクを低減する効果が期待されています。この技術は、人工臓器移植においてもレシピエントの状態を最適化し、移植成功率を高めるために応用できる可能性があります。
 - TransMedicsは臓器保存・移植医療分野で長年の経験と実績を持っています。一方、人工臓器技術開発企業は臓器工学、細胞生物学、バイオマテリアルなどの分野に強みを持っています。両者が連携することで、より高度な移植医療技術の開発を加速できる可能性があります。例えば人工臓器の長期保存技術や、移植後の生着率を高める技術などを共同で研究開発することが考えられます。
 
